<resources>
    <!-- Application Name -->
    <string name="app_name">Cleaning Buddy</string>

    <!-- Login Screen -->
    <string name="login_prompt_tv_text">Log in to your account</string>
    <string name="create_account_prompt_tv_text">Create an account</string>
    <string name="username_et_hint">username</string>
    <string name="password_et_hint">password</string>
    <string name="repeat_password_et_hint">repeat password</string>
    <string name="login_btn_text">Log in</string>
    <string name="login_no_account_tv_text">Don’t have an account yet?</string>

    <!-- Signup Screen -->
    <string name="signup_btn_text">Sign up</string>
    <string name="signup_cancel_btn_text">Cancel</string>

    <!-- Rooms -->
    <string name="room">Room</string>
    <string name="rooms">Rooms</string>
    <string name="rooms_list_header_tasks">Tasks</string>
    <string name="room_edit_title">Edit room</string>
    <string name="room_add_title">New room</string>

    <!-- Tasks -->
    <string name="task">Task</string>
    <string name="tasks">Tasks</string>
    <string name="task_history">Task history</string>
    <string name="task_edit_title">Edit task</string>
    <string name="task_add_title">New task</string>
    <string name="task_list_header_assigned">Assigned</string>
    <string name="task_btn_confirm_text">Confirm selection</string>
    <string name="confirm_completed_task_text">You have completed %1$s tasks.</string>
    <string name="confirm_completed_none_task_text">No task(s) selected to complete.</string>
    <string name="task_interval">Interval</string>
    <string name="task_assigned_user">Assigned user</string>
    <string name="task_description">Description</string>
    <string name="task_name_req">Task name *</string>
    <string name="task_custom_interval">Custom interval *</string>
    <string name="sp_option_none">[None]</string>

    <!-- Lists -->
    <string name="list_header_id">ID</string>
    <string name="task_history_list_header_date">Date</string>
    <string name="task_history_list_header_user">Completed by</string>
    <string name="task_list_header_completed">Completed</string>
    <string name="unassigned">"Unassigned"</string>
    <string name="unknown">"Unknown"</string>

    <!-- Interval -->
    <string name="interval_daily_text">Daily</string>
    <string name="interval_weekly_text">Weekly</string>
    <string name="interval_custom_text">Custom</string>

    <!-- Custom interval -->
    <string name="custom_interval_days_text">Days</string>
    <string name="custom_interval_weeks_text">Weeks</string>
    <string name="custom_interval_months_text">Months</string>

    <!-- Dialogs -->
    <string name="dialog_delete_message">Are you sure you want to delete \'%1$s\'?</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_delete">Delete</string>
    <string name="dialog_room_delete_title">Delete room</string>
    <string name="dialog_task_delete_title">Delete task</string>

    <!-- Edit text -->
    <string name="et_room_name_req">Room name *</string>
    <string name="edit_btn_save">Save</string>
    <string name="edit_btn_cancel">Cancel</string>

    <!-- Error fields -->
    <string name="error_room_name">Room name</string>
    <string name="error_task_name">Task name</string>
    <string name="error_custom_interval_name">Custom interval</string>

    <!-- Profile Screen -->
    <string name="profile_title_tv_text">Profile</string>
    <string name="logout_btn_text">Log out</string>

    <!-- Settings -->
    <string name="username_label_text">Username</string>
    <string name="language_label_text">Language</string>
    <string name="theme_label_text">Theme</string>
    <string name="language_english_text">English</string>
    <string name="language_dutch_text">Dutch</string>
    <string name="theme_light_text">Light</string>
    <string name="theme_dark_text">Dark</string>

    <!-- Tabs -->
    <string name="tab_rooms_text">Rooms</string>
    <string name="tab_tasks_text">Tasks</string>
    <string name="tab_profile_text">Profile</string>
    <string name="tab_yourTasks_text">Your tasks</string>
    <string name="tab_allTasks_text">All tasks</string>
    <string name="tab_openTasks_text">Open tasks</string>

    <!-- ScrollView column headers -->
    <string name="tab_ID_text">ID</string>
    <string name="tab_Assignee_text">Assignee</string>
    <string name="tab_completeTask_text">Complete task</string>

    <!-- Error Messages -->
    <string name="error_length_text">%1$s must be at least %2$d characters long.</string>
    <string name="error_numeric_text">%1$s must be numeric.</string>
    <string name="error_required_text">%1$s is required.</string>
    <string name="error_password_min_length_text">%1$s must be at least %2$d characters.</string>
    <string name="error_password_max_length_text">%1$s must not be longer than %2$d characters.</string>
    <string name="error_password_no_spaces_text">%1$s must not contain spaces.</string>
    <string name="error_password_strength_text">%1$s must contain at least one uppercase letter, one lowercase letter, one number and one special character.</string>
    <string name="error_password_mismatch_text">Passwords do not match.</string>
    <string name="error_invalid_username_password_text">Invalid username and password combination.</string>
    <string name="error_username_unavailable_text">Username is already registered.</string>
</resources>
