<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YourTasksActivity">

    <TextView
        android:id="@+id/activity_tasks_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tasks"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/task_add_btn_id"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Tab Buttons -->
    <Button
        android:id="@+id/task_add_btn_id"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:foreground="@drawable/add_button"
        app:layout_constraintBottom_toBottomOf="@+id/activity_tasks_item_title"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toTopOf="@+id/activity_tasks_item_title" />

    <LinearLayout
        android:id="@+id/activity_tasks_item_tabButtons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_tasks_item_title">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/task_your_task_tab_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:foreground="@drawable/bottom_border"
            android:text="@string/tab_yourTasks_text" />

        <Button
            android:id="@+id/tasks_open_task_tab_id"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/tab_openTasks_text" />

        <Button
            android:id="@+id/tasks_all_tasks_tab_id"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/tab_allTasks_text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/task_list_headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_tasks_item_tabButtons">

        <TextView
            android:id="@+id/header_task_id_tf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/list_header_id"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/header_task_name_tf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/task"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/header_task_confirm_tf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/task_list_header_completed"
            android:textAlignment="textStart" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/open_tasks_list_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_list_headers" />

    <!-- Guidelines-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <View
        android:id="@+id/button_separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_buttons_container"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start" />

    <!-- Edit buttons -->
    <LinearLayout
        android:id="@+id/edit_buttons_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_bar"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start" >

        <Button
            android:id="@+id/btn_completed_confirm"
            style="@style/Widget.Cleaner.Button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:text="@string/task_btn_confirm_text" />

    </LinearLayout>
    <!-- Bottom [Tasks] nav bar -->
    <LinearLayout
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_rooms"
            android:textColor="@color/dark_grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_rooms_text"
            style="@style/Widget.Cleaner.Button" />

        <Button
            android:id="@+id/btn_tasks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_tasks_text"
            style="@style/Widget.Cleaner.Button" />

        <Button
            android:id="@+id/btn_profile"
            android:textColor="@color/dark_grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_profile_text"
            style="@style/Widget.Cleaner.Button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
