<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Title -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Room name -->
    <TextView
        android:id="@+id/activity_new_task_item_taskNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/et_room_name_req"
        android:labelFor="@id/et_room_name"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <EditText
        android:id="@+id/et_room_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/activity_new_task_item_taskNameLabel" />

    <!-- Guidelines-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <View
        android:id="@+id/button_separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_buttons_container"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start" />

    <!-- Edit buttons -->
    <LinearLayout
        android:id="@+id/edit_buttons_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_bar"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start" >

        <Button
            android:id="@+id/btn_cancel_edit"
            style="@style/Widget.Cleaner.Button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:padding="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:text="@string/edit_btn_cancel" />

        <Button
            android:id="@+id/btn_save_edit"
            style="@style/Widget.Cleaner.Button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:padding="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:text="@string/edit_btn_save" />
    </LinearLayout>

    <!-- Bottom [Rooms] nav bar -->
    <LinearLayout
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_rooms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_rooms_text"
            style="@style/Widget.Cleaner.Button" />

        <Button
            android:id="@+id/btn_tasks"
            android:textColor="@color/dark_grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_tasks_text"
            style="@style/Widget.Cleaner.Button" />

        <Button
            android:id="@+id/btn_profile"
            android:textColor="@color/dark_grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_profile_text"
            style="@style/Widget.Cleaner.Button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
